--- a/src/cmd/CMakeLists.txt
+++ b/src/cmd/CMakeLists.txt
@@ -1,10 +1,11 @@
 # Generate a the ruby script.
 # Note that the major version of the library is included in the name.
 if (APPLE)
-  set(IGN_LIBRARY_NAME lib${PROJECT_NAME_LOWER}.dylib)
+  set(GZ_LIBRARY_NAME lib${PROJECT_NAME_LOWER}.dylib)
 else()
-  set(IGN_LIBRARY_NAME lib${PROJECT_NAME_LOWER}.so)
+  set(GZ_LIBRARY_NAME lib${PROJECT_NAME_LOWER}.so)
 endif()
+
 configure_file(
   "cmdgui.rb.in"
     "${CMAKE_CURRENT_BINARY_DIR}/cmdgui${PROJECT_VERSION_MAJOR}.rb" @ONLY)
