--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,6 +1,6 @@
 find_package(Doxygen)
 
-set(IGNITION_DOXYGEN_TAGFILES
+set(GZ_DOXYGEN_TAGFILES
   "\"${CMAKE_SOURCE_DIR}/doc/qt.tag.xml=http://doc.qt.io/qt-5/\" \
    \"${GZ-MATH_DOXYGEN_TAGFILE} = ${GZ-MATH_API_URL}\" \
    \"${GZ-MSGS_DOXYGEN_TAGFILE} = ${GZ-MSGS_API_URL}\" \
@@ -9,10 +9,10 @@ set(IGNITION_DOXYGEN_TAGFILES
 )
 
 if (DOXYGEN_FOUND)
-  configure_file(${IGNITION_CMAKE_DOXYGEN_DIR}/api.in
+  configure_file(${GZ_CMAKE_DOXYGEN_DIR}/api.in
                  ${CMAKE_BINARY_DIR}/api.dox @ONLY)
 
-  configure_file(${IGNITION_CMAKE_DOXYGEN_DIR}/tutorials.in
+  configure_file(${GZ_CMAKE_DOXYGEN_DIR}/tutorials.in
                  ${CMAKE_BINARY_DIR}/tutorials.dox @ONLY)
 
   add_custom_target(doc ALL
