ign -> gz Provisional Finale: Source Migration : gz-gui (#433)

--- a/include/gz/gui/gz_auto_headers.hh.in
+++ b/include/gz/gui/gz_auto_headers.hh.in
@@ -1,3 +1,3 @@
 // Automatically generated
-#include <gz/${IGN_DESIGNATION}/config.hh>
-${ign_headers}
+#include <gz/${GZ_DESIGNATION}/config.hh>
+${gz_headers}
