[ign to gz] Deduplicate QML files
Signed-off-by: Louise Poubel <louise@openrobotics.org>

--- a/examples/config/plugin_params.config
+++ b/examples/config/plugin_params.config
@@ -16,7 +16,7 @@
       Properties passed directly to the QML card.
       It includes:
       * All Pane properties: https://doc.qt.io/qt-5/qml-qtquick-controls2-pane-members.html
-      * All custom properties within IgnCard.qml
+      * All custom properties within GzCard.qml
     -->
     <property type="bool" key="showDockButton">false</property>
     <property type="double" key="x">350</property>
