Add fallback rendering for other APIs
Until we get native API to Qt implemented, fallback system can be used
to transfer GPU (Ogre) -> CPU -> GPU (Qt)

This is slow, but it works.

Also simplify abstractions by merging IgnCameraTextureRhi into
RenderThreadRhi.

Fix codecheck errors

Add documentation

Use GraphicsAPI instead of CurrentGraphicsAPI

Fix CMake project

Signed-off-by: Matias N. Goldberg <dark_sylinc@yahoo.com.ar>

--- a/src/plugins/minimal_scene/CMakeLists.txt
+++ b/src/plugins/minimal_scene/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
   MinimalScene.cc
   MinimalSceneRhi.cc
   MinimalSceneRhiOpenGL.cc
+  EngineToQtInterface.cc
 )
 
 set(PROJECT_LINK_LIBS "")
@@ -22,6 +23,7 @@ endif()
 gz_gui_add_plugin(MinimalScene
   SOURCES
     ${SOURCES}
+    EngineToQtInterface.hh
   QT_HEADERS
     MinimalScene.hh
   PUBLIC_LINK_LIBS
