--- a/include/gz/gui/ign_auto_headers.hh.in
+++ b/include/gz/gui/ign_auto_headers.hh.in
@@ -1,3 +1,3 @@
 // Automatically generated
-#include <ignition/${GZ_DESIGNATION}/config.hh>
+#include <gz/${GZ_DESIGNATION}/config.hh>
 ${ign_headers}
