Update cmd/CMakeLists to conform with all other gz libraries (#478)
This fixes the library path obtained by cmdgui.rb such that it points to
the .so file contained in the non-dev debian pack

Signed-off-by: Addisu Z. Taddese <addisu@openrobotics.org>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,5 +80,7 @@ if(TARGET UNIT_ign_TEST)
     ENVIRONMENT "${_env_vars}")
 endif()
 
-add_subdirectory(cmd)
+if(NOT WIN32)
+  add_subdirectory(cmd)
+endif()
 add_subdirectory(plugins)
