Update cmd/CMakeLists to conform with all other gz libraries (#478)
This fixes the library path obtained by cmdgui.rb such that it points to
the .so file contained in the non-dev debian pack

Signed-off-by: Addisu Z. Taddese <addisu@openrobotics.org>

--- a/conf/CMakeLists.txt
+++ b/conf/CMakeLists.txt
@@ -1,20 +1,23 @@
-set(gz_library_path "${CMAKE_BINARY_DIR}/src/cmd/cmdgui${PROJECT_VERSION_MAJOR}")
+# Used only for internal testing.
+set(gz_library_path "${CMAKE_BINARY_DIR}/test/lib/ruby/gz/cmd${GZ_DESIGNATION}${PROJECT_VERSION_MAJOR}")
 
 # Generate a configuration file for internal testing.
 # Note that the major version of the library is included in the name.
 # Ex: gui0.yaml
 configure_file(
-  "gui.yaml.in"
-    "${CMAKE_BINARY_DIR}/test/conf/gui${PROJECT_VERSION_MAJOR}.yaml" @ONLY)
+  "${GZ_DESIGNATION}.yaml.in"
+    "${CMAKE_BINARY_DIR}/test/conf/${GZ_DESIGNATION}${PROJECT_VERSION_MAJOR}.yaml" @ONLY)
 
-set(gz_library_path "${CMAKE_INSTALL_PREFIX}/lib/ruby/gz/cmdgui${PROJECT_VERSION_MAJOR}")
+# Used for the installed version.
+set(gz_library_path "${CMAKE_INSTALL_PREFIX}/lib/ruby/gz/cmd${GZ_DESIGNATION}${PROJECT_VERSION_MAJOR}")
 
-# Generate a configuration file.
+# Generate the configuration file that is installed.
 # Note that the major version of the library is included in the name.
 # Ex: gui0.yaml
 configure_file(
-  "gui.yaml.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/gui${PROJECT_VERSION_MAJOR}.yaml" @ONLY)
+  "${GZ_DESIGNATION}.yaml.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/${GZ_DESIGNATION}${PROJECT_VERSION_MAJOR}.yaml" @ONLY)
 
 # Install the yaml configuration files in an unversioned location.
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/gui${PROJECT_VERSION_MAJOR}.yaml DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATAROOTDIR}/gz/)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${GZ_DESIGNATION}${PROJECT_VERSION_MAJOR}.yaml
+  DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATAROOTDIR}/gz/)
