--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -81,5 +81,7 @@ if(TARGET UNIT_gz_TEST)
     ENVIRONMENT "${_env_vars}")
 endif()
 
-add_subdirectory(cmd)
+if(NOT WIN32)
+  add_subdirectory(cmd)
+endif()
 add_subdirectory(plugins)
