Disable apple tests
Signed-off-by: Nate Koenig <nate@openrobotics.org>

--- a/src/plugins/point_cloud/CMakeLists.txt
+++ b/src/plugins/point_cloud/CMakeLists.txt
@@ -1,3 +1,10 @@
+set (point_cloud_test_sources PointCloud_TEST.cc)
+
+# PointCloud_TEST requires a screen, which is not available on the Apple CI system
+if (NOT APPLE)
+  list (REMOVE_ITEM point_cloud_test_sources PointCloud_TEST.cc)
+endif()
+
 gz_gui_add_plugin(PointCloud
   SOURCES
     PointCloud.cc
@@ -6,5 +13,5 @@ gz_gui_add_plugin(PointCloud
   PUBLIC_LINK_LIBS
     gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
   TEST_SOURCES
-    PointCloud_TEST.cc
+    ${point_cloud_test_sources}
 )
