revert apple changes
Signed-off-by: Nate Koenig <nate@openrobotics.org>

--- a/src/plugins/screenshot/CMakeLists.txt
+++ b/src/plugins/screenshot/CMakeLists.txt
@@ -1,11 +1,3 @@
-set (screenshot_test_sources Screenshot_TEST.cc)
-
-# Screenshot_TEST requires a screen, which is not available on the Apple  CI
-# system
-if (NOT APPLE)
-  list (REMOVE_ITEM screenshot_test_sources Screenshot_TEST.cc)
-endif()
-
 gz_gui_add_plugin(Screenshot
   SOURCES
     Screenshot.cc
@@ -14,5 +6,5 @@ gz_gui_add_plugin(Screenshot
   PUBLIC_LINK_LIBS
     gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
   TEST_SOURCES
-    ${screenshot_test_sources}
+    Screenshot_TEST.cc
 )
