--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10.2 FATAL_ERROR)
 #============================================================================
 # Initialize the project
 #============================================================================
-project(ignition-gui3 VERSION 3.11.2)
+project(ignition-gui3 VERSION 3.12.0)
 
 #============================================================================
 # Find ignition-cmake
@@ -15,6 +15,7 @@ find_package(ignition-cmake2 2.14 REQUIRED)
 #============================================================================
 ign_configure_project(
   REPLACE_IGNITION_INCLUDE_PATH gz/gui
+  VERSION_SUFFIX pre1
 )
 
 #============================================================================
