Add Vulkan backend.
It's working!

Signed-off-by: Matias N. Goldberg <dark_sylinc@yahoo.com.ar>

--- a/src/plugins/minimal_scene/CMakeLists.txt
+++ b/src/plugins/minimal_scene/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
   MinimalScene.cc
   MinimalSceneRhi.cc
   MinimalSceneRhiOpenGL.cc
+  MinimalSceneRhiVulkan.cc
   EngineToQtInterface.cc
 )
 
