--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -112,6 +112,7 @@ function(gz_gui_add_plugin plugin_name)
 endfunction()
 
 # Plugins
+add_subdirectory(camera_config)
 add_subdirectory(camera_tracking)
 add_subdirectory(grid_config)
 add_subdirectory(image_display)
