Update gz-gui to use new message generation pipeline
Signed-off-by: Michael Carroll <mjcarroll@intrinsic.ai>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,18 @@ set(GZ_RENDERING_VER ${gz-rendering8_VERSION_MAJOR})
 gz_find_package(gz-msgs10 REQUIRED)
 set(GZ_MSGS_VER ${gz-msgs10_VERSION_MAJOR})
 
+# Get the gz-msgs installed messages and generate a library from them
+gz_msgs_get_installed_messages(
+  MESSAGES_PATH_VARIABLE MSGS_PATH
+  MESSAGES_PROTOS_VARIABLE MSGS_PROTOS)
+
+gz_msgs_generate_messages(
+  TARGET gz_msgs_gen
+  PROTO_PACKAGE "gz.msgs"
+  MSGS_PATH ${MSGS_PATH}
+  MSGS_PROTOS ${MSGS_PROTOS})
+
+
 # Find if command is available. This is used to enable tests.
 # Note that CLI files are installed regardless of whether the dependency is
 # available during build time
