Use CMake's protobuf module
Signed-off-by: Ryan Friedman <ryanfriedman5410+github@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,7 @@ message(STATUS "\n\n-- ====== Finding Dependencies ======")
 
 #--------------------------------------
 # Find Protobuf
-gz_find_package(GzProtobuf
-                REQUIRED
-                PRETTY Protobuf)
+find_package(Protobuf REQUIRED)
 
 #--------------------------------------
 # Find Tinyxml2
