--- a/src/plugins/minimal_scene/CMakeLists.txt
+++ b/src/plugins/minimal_scene/CMakeLists.txt
@@ -36,7 +36,6 @@ if (APPLE)
       MinimalSceneRhiMetal.mm
       PROPERTIES
       COMPILE_FLAGS
-          "-fobjc-arc"
-          "-Wno-nullability-completeness"
+          "-fobjc-arc -Wno-nullability-completeness"
   )
 endif()
