Fix segfaulting tests (#429)
* Break scene3d test apart into component tests

Signed-off-by: Michael Carroll <michael@openrobotics.org>

* Fix include paths

Signed-off-by: Michael Carroll <michael@openrobotics.org>

* Remove scene3d as it is deprecated

Signed-off-by: Michael Carroll <michael@openrobotics.org>

* Remove message header

Signed-off-by: Michael Carroll <michael@openrobotics.org>

* Bump everything to ogre2 by default

Signed-off-by: Michael Carroll <michael@openrobotics.org>

* line order

Signed-off-by: Louise Poubel <louise@openrobotics.org>

* Fix tests by delaying get render engine calls  (#535)



---------

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* revert default engine

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* Fix rendering tests (#561)

* debugging

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* reset cam

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* more testing

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* no unload

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* more testing with no unload

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* unload engine in gzrenderer

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* unload engine in gzrenderer debugging

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* unload engine in gzrenderer reset scene

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* comment out unload

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* increase timeout

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* test timing

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* cleanup

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* cleanup

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* more cleanup

Signed-off-by: Ian Chen <ichen@openrobotics.org>

---------

Signed-off-by: Ian Chen <ichen@openrobotics.org>

* Suppress warnings in metal

Signed-off-by: Michael

--- a/src/plugins/minimal_scene/CMakeLists.txt
+++ b/src/plugins/minimal_scene/CMakeLists.txt
@@ -36,6 +36,6 @@ if (APPLE)
       MinimalSceneRhiMetal.mm
       PROPERTIES
       COMPILE_FLAGS
-          "-fobjc-arc"
+          "-fobjc-arc -Wno-nullability-completeness"
   )
 endif()
