Condense namespaces without changing tests or whitespace
Signed-off-by: Michael Carroll <mjcarroll@intrinsic.ai>

--- a/include/gz/gui/config.hh.in
+++ b/include/gz/gui/config.hh.in
@@ -32,4 +32,4 @@
 
 #define GZ_GUI_PLUGIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${GZ_LIB_INSTALL_DIR}/gz-${GZ_DESIGNATION}-${PROJECT_VERSION_MAJOR}/plugins"
 
-#endif
+#endif  // GZ_GUI_CONFIG_HH_
