--- a/src/plugins/camera_tracking/CMakeLists.txt
+++ b/src/plugins/camera_tracking/CMakeLists.txt
@@ -1,11 +1,18 @@
-gz_gui_add_plugin(CameraTracking
-  SOURCES
-    CameraTracking.cc
-  QT_HEADERS
-    CameraTracking.hh
-  TEST_SOURCES
-    # CameraTracking_TEST.cc
-  PUBLIC_LINK_LIBS
-   gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
-   gz-common${GZ_COMMON_VER}::profiler
+qt6_add_qml_module(CameraTracking
+  URI camera_tracking
+  VERSION 1.0
+  SOURCES CameraTracking.cc
+  QML_FILES CameraTracking.qml
 )
+
+target_link_libraries(CameraTracking PRIVATE
+   gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
+   gz-transport${GZ_TRANSPORT_VER}::gz-transport${GZ_TRANSPORT_VER}
+   gz-plugin${GZ_PLUGIN_VER}::register
+   Qt6::Gui
+   Qt6::Widgets
+   Qt6::Quick
+   Qt6::QuickControls2
+)
+
+install(TARGETS CameraTracking DESTINATION ${GZ_GUI_PLUGIN_INSTALL_DIR})
