--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -1,7 +1,5 @@
 gz_get_sources(tests)
 
-find_package(Qt5Test REQUIRED)
-
 gz_build_tests(
   TYPE INTEGRATION
   SOURCES ${tests}
@@ -9,7 +7,7 @@ gz_build_tests(
     ${PROJECT_NAME}_test_helpers
     gz-plugin${GZ_PLUGIN_VER}::loader
     gz-rendering${GZ_RENDERING_VER}::gz-rendering${GZ_RENDERING_VER}
-    Qt5::Test
-  ENVIRONMENT 
+    Qt::Test
+  ENVIRONMENT
     GZ_GUI_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
 )
