Remove qt5 from examples
Signed-off-by: Michael Carroll <mjcarroll@intrinsic.ai>

--- a/examples/standalone/window/CMakeLists.txt
+++ b/examples/standalone/window/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 set (CMAKE_AUTOMOC ON)
 
 # Find Qt5
-find_package (Qt5
+find_package (Qt5 5.15
   COMPONENTS
     Core
     Quick
@@ -29,9 +29,4 @@ add_executable(window
 )
 target_link_libraries(window
   gz-gui${GZ_GUI_VER}::gz-gui${GZ_GUI_VER}
-  ${Qt5Core_LIBRARIES}
-  ${Qt5Qml_LIBRARIES}
-  ${Qt5Quick_LIBRARIES}
-  ${Qt5QuickControls2_LIBRARIES}
 )
-
