--- a/examples/plugin/dialog_from_plugin/CMakeLists.txt
+++ b/examples/plugin/dialog_from_plugin/CMakeLists.txt
@@ -8,7 +8,6 @@ endif()
 
 set (CMAKE_AUTOMOC ON)
 
-# Find Qt5
 find_package (Qt5
   COMPONENTS
     Core
@@ -21,9 +20,7 @@ find_package (Qt5
 find_package(gz-gui9 REQUIRED)
 set(GZ_GUI_VER ${gz-gui9_VERSION_MAJOR})
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GZ-GUI_CXX_FLAGS}")
-
-QT5_ADD_RESOURCES(resources_RCC DialogFromPlugin.qrc)
+qt_add_resources(resources_RCC DialogFromPlugin.qrc)
 
 # Generate examples
 add_library(DialogFromPlugin SHARED ${headers_MOC}
@@ -32,8 +29,4 @@ add_library(DialogFromPlugin SHARED ${headers_MOC}
 )
 target_link_libraries(DialogFromPlugin
   gz-gui${GZ_GUI_VER}::gz-gui${GZ_GUI_VER}
-  ${Qt5Core_LIBRARIES}
-  ${Qt5Qml_LIBRARIES}
-  ${Qt5Quick_LIBRARIES}
-  ${Qt5QuickControls2_LIBRARIES}
 )
