--- a/examples/plugin/gz_components/CMakeLists.txt
+++ b/examples/plugin/gz_components/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 
 set (CMAKE_AUTOMOC ON)
 
-find_package (Qt5
+find_package (Qt5 5.15
   COMPONENTS
     Core
     Quick
@@ -21,7 +21,7 @@ set(GZ_GUI_VER ${gz-gui9_VERSION_MAJOR})
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GZ-GUI_CXX_FLAGS}")
 
-QT5_ADD_RESOURCES(resources_RCC GzComponents.qrc)
+qt_add_resources(resources_RCC GzComponents.qrc)
 
 # Generate examples
 add_library(GzComponents SHARED ${headers_MOC}
@@ -30,8 +30,4 @@ add_library(GzComponents SHARED ${headers_MOC}
 )
 target_link_libraries(GzComponents
   gz-gui${GZ_GUI_VER}::gz-gui${GZ_GUI_VER}
-  ${Qt5Core_LIBRARIES}
-  ${Qt5Qml_LIBRARIES}
-  ${Qt5Quick_LIBRARIES}
-  ${Qt5QuickControls2_LIBRARIES}
 )
