--- a/examples/plugin/hello_plugin/CMakeLists.txt
+++ b/examples/plugin/hello_plugin/CMakeLists.txt
@@ -8,8 +8,7 @@ endif()
 
 set (CMAKE_AUTOMOC ON)
 
-# Find Qt5
-find_package (Qt5
+find_package (Qt5 5.15
   COMPONENTS
     Core
     Quick
@@ -21,9 +20,7 @@ find_package (Qt5
 find_package(gz-gui9 REQUIRED)
 set(GZ_GUI_VER ${gz-gui9_VERSION_MAJOR})
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GZ-GUI_CXX_FLAGS}")
-
-QT5_ADD_RESOURCES(resources_RCC hello.qrc)
+qt_add_resources(resources_RCC hello.qrc)
 
 # Generate examples
 add_library(HelloPlugin SHARED ${headers_MOC}
@@ -32,8 +29,4 @@ add_library(HelloPlugin SHARED ${headers_MOC}
 )
 target_link_libraries(HelloPlugin
   gz-gui${GZ_GUI_VER}::gz-gui${GZ_GUI_VER}
-  ${Qt5Core_LIBRARIES}
-  ${Qt5Qml_LIBRARIES}
-  ${Qt5Quick_LIBRARIES}
-  ${Qt5QuickControls2_LIBRARIES}
 )
