--- a/examples/plugin/multiple_qml/CMakeLists.txt
+++ b/examples/plugin/multiple_qml/CMakeLists.txt
@@ -8,7 +8,6 @@ endif()
 
 set (CMAKE_AUTOMOC ON)
 
-# Find Qt5
 find_package (Qt5
   COMPONENTS
     Core
@@ -23,7 +22,7 @@ set(GZ_GUI_VER ${gz-gui9_VERSION_MAJOR})
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GZ-GUI_CXX_FLAGS}")
 
-QT5_ADD_RESOURCES(resources_RCC MultipleQml.qrc)
+qt_add_resources(resources_RCC MultipleQml.qrc)
 
 # Generate examples
 add_library(MultipleQml SHARED ${headers_MOC}
@@ -32,8 +31,4 @@ add_library(MultipleQml SHARED ${headers_MOC}
 )
 target_link_libraries(MultipleQml
   gz-gui${GZ_GUI_VER}::gz-gui${GZ_GUI_VER}
-  ${Qt5Core_LIBRARIES}
-  ${Qt5Qml_LIBRARIES}
-  ${Qt5Quick_LIBRARIES}
-  ${Qt5QuickControls2_LIBRARIES}
 )
