--- a/examples/standalone/dialogs/CMakeLists.txt
+++ b/examples/standalone/dialogs/CMakeLists.txt
@@ -8,8 +8,7 @@ endif()
 
 set (CMAKE_AUTOMOC ON)
 
-# Find Qt5
-find_package (Qt5
+find_package (Qt5 5.15
   COMPONENTS
     Core
     Quick
@@ -21,17 +20,10 @@ find_package (Qt5
 find_package(gz-gui9 REQUIRED)
 set(GZ_GUI_VER ${gz-gui9_VERSION_MAJOR})
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GZ-GUI_CXX_FLAGS}")
-
 # Generate example
 add_executable(dialogs
   dialogs.cc
 )
 target_link_libraries(dialogs
   gz-gui${GZ_GUI_VER}::gz-gui${GZ_GUI_VER}
-  ${Qt5Core_LIBRARIES}
-  ${Qt5Qml_LIBRARIES}
-  ${Qt5Quick_LIBRARIES}
-  ${Qt5QuickControls2_LIBRARIES}
 )
-
