--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,12 @@ gz_find_package (Qt${QT_MAJOR_VERSION}
     Test
   REQUIRED
   PKGCONFIG "Qt${QT_MAJOR_VERSION}Core Qt${QT_MAJOR_VERSION}Quick Qt${QT_MAJOR_VERSION}QuickControls2 Qt${QT_MAJOR_VERSION}Widgets")
+
 add_compile_definitions(QT_DISABLE_DEPRECATED_UP_TO=0x050F00)
+set(CMAKE_AUTOMOC TRUE)
+set(CMAKE_AUTOUIC TRUE)
+set(CMAKE_AUTORCC TRUE)
+cmake_policy(SET CMP0100 NEW)
 
 if(POLICY CMP0100)
   cmake_policy(SET CMP0100 NEW)
