Forward port ci workflow changes.
Signed-off-by: Carlos Agüero <caguero@openrobotics.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: Ubuntu CI
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - 'ign-gui[0-9]'
+      - 'gz-gui[0-9]?'
+      - 'main'
 
 jobs:
   jammy-ci:
