Use relative install paths for plugin shared librariesi and gz-tools data
Signed-off-by: Addisu Z. Taddese <addisu@openrobotics.org>

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -25,5 +25,5 @@ if (DOXYGEN_FOUND)
     COMMENT "Generating API documentation with Doxygen" VERBATIM)
 
   install(FILES ${CMAKE_BINARY_DIR}/doc/${PROJECT_NAME_LOWER}.tag.xml 
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/gz/${PROJECT_NAME_LOWER}_${PROJECT_VERSION_MINOR})
+    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/gz/${PROJECT_NAME_LOWER}_${PROJECT_VERSION_MINOR})
 endif()
